--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
             </h3>
             
             <p class="font-display font-medium text-gold-500/60 mb-12 tracking-[0.3em] uppercase text-xs">
-                Premium Inventory Control
+                JOINT INVENTORY SYSTEM
             </p>
             
             <button onclick="enterSystem()" class="group relative px-12 py-4 rounded-full bg-gradient-to-r from-velvet-900 to-black border border-velvet-800 hover:border-gold-500/50 transition-all duration-500 hover:shadow-[0_0_40px_rgba(197,160,89,0.3)]">
-                <span class="relative z-10 font-display font-bold text-white group-hover:text-gold-300 transition-colors tracking-wider">Access Terminal</span>
+                <span class="relative z-10 font-display font-bold text-white group-hover:text-gold-300 transition-colors tracking-wider"> ACCESS TERMINAL </span>
             </button>
         </div>
     </div>
